<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_content"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include layout="@layout/toolbar_coordinator"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/edit_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/keyline_1_half"
                android:layout_marginTop="@dimen/keyline_1"
                android:background="@color/background_content"
                android:orientation="vertical"
                android:paddingBottom="?actionBarSize"
                android:paddingLeft="@dimen/keyline_1"
                android:paddingRight="@dimen/keyline_1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_event_name"
                        style="@style/Widget.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_event_name"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_event_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_event_desc"
                        style="@style/Widget.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_event_desc"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_organization"
                        style="@style/Widget.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_event_organization"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_event_date"
                        style="@style/Widget.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_event_date"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <include
        android:id="@+id/button_container"
        layout="@layout/content_buttons"/>

</LinearLayout>