<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_content">

    <LinearLayout
        android:id="@+id/open_settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_primary"
            android:elevation="@dimen/elevation_toolbar"
            android:orientation="vertical"
            android:paddingTop="?attr/actionBarSize">

            <TextView
                style="@style/TextHeader.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_1_double"
                android:layout_marginRight="@dimen/keyline_1_double"
                android:layout_marginTop="@dimen/keyline_1_half"
                android:text="@string/app_name"/>

            <TextView
                style="@style/TextBody.SubHeader.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/keyline_1"
                android:layout_marginLeft="@dimen/keyline_1_double"
                android:layout_marginRight="@dimen/keyline_1_double"
                android:layout_marginTop="@dimen/keyline_1_half"
                android:text="@string/tagline"
                android:textColor="@color/text_light"
                android:textStyle="italic"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_content">

            <TextView
                android:id="@+id/settings_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextTitle"
                android:layout_gravity="top"
                android:layout_margin="@dimen/keyline_1_double"
                android:layout_marginTop="@dimen/keyline_1"
                android:text="@string/content_no_wifi_settings"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_open_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:clickable="true"
                android:src="@drawable/ic_fab_settings"
                android:contentDescription="@string/content_open_settings"
                app:backgroundTint="@color/theme_accent"
                app:borderWidth="0dp"
                app:elevation="@dimen/elevation_fab_default"
                app:fabSize="normal"
                app:layout_anchor="@id/open_settings_container"
                app:layout_anchorGravity="bottom|right|end"
                app:rippleColor="@color/theme_accent_ripple"/>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="?attr/actionBarSize"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_good_intents"
                android:gravity="center" />

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_1_double"
                android:text="@string/app_name"
                android:gravity="center"/>

            <TextView
                style="@style/TextBody.SubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/keyline_1"
                android:layout_marginTop="@dimen/keyline_1_half"
                android:text="@string/tagline"
                android:textStyle="italic"
                android:gravity="center"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/sign_in_container"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@color/transparent_black_2"
            android:layout_gravity="bottom">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                tools:visibility="gone"/>
        </FrameLayout>
    </FrameLayout>

</FrameLayout>