<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_window">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/theme_primary"
                app:expandedTitleMarginStart="?actionBarInsetStart"
                app:expandedTitleTextAppearance="@style/ActionBar.ExpandedTitleText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/event_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:tint="#11000000"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    tools:ignore="ContentDescription"/>

                <View
                    android:id="@+id/header_background"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:background="@color/transparent_black"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_actionbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:titleTextAppearance="@style/ActionBar.TitleText"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="?actionBarInsetStart"
                android:layout_marginStart="?actionBarInsetStart"
                android:orientation="vertical"
                android:paddingBottom="@dimen/keyline_1"
                android:paddingEnd="@dimen/keyline_1"
                android:paddingRight="@dimen/keyline_1"
                android:paddingTop="@dimen/keyline_1">


                <TextView
                    android:id="@+id/event_description"
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/organization_title"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/content_event_organization"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/event_organization"
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/date_header"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/content_event_date"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/event_date"
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/friends_header"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/content_event_friends"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/friends_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/photos_header"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_1"
                    android:text="@string/content_event_photos"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/photos_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:src="@drawable/ic_fab_checkin_off"
            app:backgroundTint="@color/fab_normal"
            app:borderWidth="0dp"
            app:elevation="@dimen/elevation_fab_default"
            app:fabSize="normal"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:rippleColor="@color/fab_pressed"/>
    </android.support.design.widget.CoordinatorLayout>
</FrameLayout>